# ResultsChecker

./: .gitignore  README.md  graph.py  main.py  models.py  pyproject.toml
static/: app.js  index.html  styles.css
